detail reservation for admin
